# src/dtos/update-tenant-chatwoot-config.dto.ts
@@ -1,0 +1,15 @@
+import { IsString, IsOptional } from 'class-validator';
+
+export class UpdateTenantChatwootConfigDto {
+  @IsOptional()
+  @IsString()
+  chatbotApiKey?: string;
+
+  @IsOptional()
+  @IsString()
+  userApiKey?: string;
+
+  @IsOptional()
+  @IsString()
+  chatwootHost?: string;
+}
